--- a/index.html
+++ b/index.html
@@ -26,42 +26,42 @@
       <p>The blocks & components you need</p>
     </header>
     
-    <main class="thegrid">
-      <article class="card">
-        <div class="inflex">
-          <div class="wrapemoji handemoji">
+    <main class="card-grid">
+      <article class="the-card">
+        <div class="card-content">
+          <div class="wrap-emoji hand-emoji">
             <span role="img" aria-label="raised hand">✋</span>
           </div>
           <h2>Collect Feedback at Multiple Touchpoints</h2>
           <p>Provide a comprehensive understanding of the customer experience.</p>
           <div>
-          <img class="theimages" src="./resources/photo_2.webp" alt="Group of young men having a discussion in an old office">
+          <img class="card-image" src="./resources/photo_2.webp" alt="Group of young men having a discussion in an old office">
           </div>
         </div>
       </article>
 
-      <article class="card">
-        <div class="inflex">
-          <div class="wrapemoji netemoji">
+      <article class="the-card">
+        <div class="card-content">
+          <div class="wrap-emoji net-emoji">
             <span role="img" aria-label="a net emoji">🥅</span>
           </div>
           <h2>Ask Targeted and Specific Questions</h2>
           <p>Avoid vague or open-ended questions that may not yield actionable insights.</p>
           <div>
-            <img class="theimages" src="./resources/photo_1.webp" alt="A man with a microphone is speaking while some group of young men listens">
+            <img class="card-image" src="./resources/photo_1.webp" alt="A man with a microphone is speaking while some group of young men listens">
           </div>
         </div>
       </article>
 
-      <article class="card">
-        <div class="inflex">
-          <div class="wrapemoji chatemoji">
+      <article class="the-card">
+        <div class="card-content">
+          <div class="wrap-emoji chat-emoji">
             <span role="img" aria-label="a chat emoji">💬</span>
           </div>
           <h2>Prioritize and Respond to Feedback</h2>
           <p>Communicate the changes or improvements you've made in response to their feedback.</p>
           <div>
-            <img class="theimages" src="./resources/photo_3.webp" alt="A man with a microphone is speaking while some group of young men listens">
+            <img class="card-image" src="./resources/photo_3.webp" alt="A man with a microphone is speaking while some group of young men listens">
           </div>
         </div>
       </article>
