--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="3 Steps for quality feedbacks for SaaS products"/>
+    <meta name="description" content="3 Steps for Quality Feedback for SaaS Products"/>
 
     <link
       rel="icon"
